--- a/templates/TestPage.html
+++ b/templates/TestPage.html
@@ -23,15 +23,15 @@
       }
     </script>
     <style>
-        h1{
+        div{
             font-size: 60px;
-            color: red;
+
         }
     </style>
 </head>
 <body>
     <form action="index" method="post">
-        <h1>테스트페이지 입니다</h1>
+
         <div id="result"></div>
     </form>
 </body>
