--- a/templates/TestPage.html
+++ b/templates/TestPage.html
@@ -7,28 +7,24 @@
     <script type="text/javascript">
       setInterval(readresult, 1000)
       function readresult(){
+        var sec = 0
+        var min = 0
+        var hour = 0
         var res = document.getElementById("result");
         var op = document.getElementById("operatingtime");
         var nob = document.getElementById("notob");
         var ob = document.getElementById("ob");
-
-        var v1 = ""
-        var v2 = ""
-        var v3 = ""
-        var v4 = ""
-        
         var xhr = new XMLHttpRequest();
         xhr.open("POST", "/sen", true)
         xhr.send();
         xhr.onload=()=>{
           if(xhr.readyState === 4){
             if(xhr.status === 200){
-              v1, v2, v3, v4 = xhr.responseText;
-              res.innerHTML =  "수면자세: " + v1;
-              op.innerHTML =  "작동시간: " + v2;
-              nob.innerHTML =  "비 수면 시간: " + v3;
-              ob.innerHTML =  "수면 시간: " + v4;
-            
+              var values = xhr.responseText.split(",");
+              res.innerHTML = "수면자세: " + values[0];
+              op.innerHTML =  "작동시간: " + values[1]+"초";
+              nob.innerHTML =  "비수면 시간: " + values[2]+"초";
+              ob.innerHTML =  "수면 시간: " + values[3]+"초";
             } else{
               res.innerHTML = "failed";
             }
@@ -37,7 +33,7 @@
       }
     </script>
     <style>
-        @result{
+        div{
             font-size: 60px;
         }
 
@@ -46,10 +42,12 @@
 <body>
     <form action="index" method="post">
 
-        <div id="result"></div>
+        <div id= "result"></div>
         <div id = "operatingtime"></div>
         <div id = "notob"></div>
         <div id = "ob"></div>
+
+        <button onclick="location.href='Monitoring.html'">점수</button>
     </form>
 </body>
 </html>
