--- a/templates/TestPage.html
+++ b/templates/TestPage.html
@@ -16,6 +16,7 @@
         var nob = document.getElementById("notob");
         var ob = document.getElementById("ob");
         var respi = document.getElementById("respiration");
+        var hr = document.getElementById("heartrate");
         var xhr = new XMLHttpRequest();
         xhr.open("POST", "/sen", true)
         xhr.send();
@@ -27,7 +28,20 @@
               op.innerHTML =  "작동시간: " + values[1]+"초";
               nob.innerHTML =  "비수면 시간: " + values[2]+"초";
               ob.innerHTML =  "수면 시간: " + values[3]+"초";
-              respi.innerHTML = "분당 호흡 수: " + values[4]+"번";
+              if(int(values[4]) == 0){
+                respi.innerHTML = "분당 호흡 수: 측정 중입니다.";
+              }
+              else{
+                respi.innerHTML = "분당 호흡 수: " + values[4]+"번";
+              }
+              if(int(value[5]) == 0){
+                hr.innerHTMl = "심박 수: 측정 중입니다.";
+              }
+              else{
+                hr.innerHTML = "심박 수: " + values[5]+"번";
+              }
+              
+              
             } else{
               res.innerHTML = "failed";
             }
@@ -66,7 +80,8 @@
         <div id = "operatingtime"></div>
         <div id = "notob"></div>
         <div id = "ob"></div>
-        <div id = "respiration">호흡 수: </div>
+        <div id = "respiration"></div>
+        <div id = "heartrate"> </div>
     </form>
 </body>
 </html>
