--- a/templates/TestPage.html
+++ b/templates/TestPage.html
@@ -34,7 +34,7 @@
               else{
                 respi.innerHTML = "분당 호흡 수: " + values[4]+"번";
               }
-              if(Number(value[5]) == 0){
+              if(Number(values[5]) == 0){
                 hr.innerHTMl = "심박 수: -번";
               }
               else{
