--- a/templates/TestPage.html
+++ b/templates/TestPage.html
@@ -28,18 +28,9 @@
               op.innerHTML =  "작동시간: " + values[1]+"초";
               nob.innerHTML =  "비수면 시간: " + values[2]+"초";
               ob.innerHTML =  "수면 시간: " + values[3]+"초";
-              if(values[4] == "0"){
-                respi.innerHTML = "분당 호흡 수: -번";
-              }
-              else{
-                respi.innerHTML = "분당 호흡 수: " + values[4]+"번";
-              }
-              if(values[5] == "0"){
-                hr.innerHTMl = "심박 수: -번";
-              }
-              else{
-                hr.innerHTML = "심박 수: " + values[5]+"번";
-              }
+              respi.innerHTML = "분당 호흡 수: " + values[4]+"번";
+              hr.innerHTML = "심박 수: " + values[5]+"번";
+              
               
               
             } else{
@@ -80,8 +71,8 @@
         <div id = "operatingtime"></div>
         <div id = "notob"></div>
         <div id = "ob"></div>
-        <div id = "respiration"></div>
-        <div id = "heartrate"> </div>
+        <div id = "respiration">분당 호흡 수: -번</div>
+        <div id = "heartrate">심박 수: -번</div>
     </form>
 </body>
 </html>
