--- a/templates/TestPage.html
+++ b/templates/TestPage.html
@@ -62,7 +62,10 @@
     </script>
     <style>
         div{
-            font-size: 60px;
+            font-size: 40px;
+        }
+        img{
+          margin-left: 300px;
         }
 
     </style>
@@ -76,6 +79,7 @@
         <div id = "ob"></div>
         <div id = "respiration">분당 호흡 수: -번</div>
         <div id = "heartrate">심박 수: -번</div>
+        <img stc="../graph.png?v=1"/>
     </form>
 </body>
 </html>
