--- a/templates/TestPage.html
+++ b/templates/TestPage.html
@@ -79,7 +79,7 @@
         <div id = "ob"></div>
         <div id = "respiration">분당 호흡 수: -번</div>
         <div id = "heartrate">심박 수: -번</div>
-        <img src="images/graph.png"/>
+        <img src="/images/graph.png" onerror="this.src='images/graph.png'"/>
     </form>
 </body>
 </html>
