--- a/templates/TestPage.html
+++ b/templates/TestPage.html
@@ -80,7 +80,7 @@
         <div id = "respiration">분당 호흡 수: -번</div>
         <div id = "heartrate">심박 수: -번</div>
         {% if True %}
-        <img src="{{url_for('static', filename=image_file) }}">
+        <img src="images/graph.png" width="500" height="500">
         {% endif %}
     </form>
 </body>
