--- a/templates/TestPage.html
+++ b/templates/TestPage.html
@@ -72,16 +72,19 @@
     </script>
     <style>
         div{
-            font-size: 40px;
+          font-size: 40px;
         }
         img{
           margin-left: 500px;
           margin-bottom: 300px;
         }
+        *{
+          color: white;
+        }
 
     </style>
 </head>
-<body>
+<body style="background-color=gray">
     <form action="index" method="post">
 
         <div id= "result"></div>
