--- a/templates/TestPage.html
+++ b/templates/TestPage.html
@@ -78,13 +78,10 @@
           margin-left: 500px;
           margin-bottom: 300px;
         }
-        *{
-          color: white;
-        }
 
     </style>
 </head>
-<body style="background-color=gray">
+<body>
     <form action="index" method="post">
 
         <div id= "result"></div>
