--- a/templates/TestPage.html
+++ b/templates/TestPage.html
@@ -15,7 +15,7 @@
         var res = document.getElementById("result");
         var op = document.getElementById("operatingtime");
         var nob = document.getElementById("notob");
-        var ob = document.getElementById("ob");
+        var ob = document.getElementById("onbed");
         var respi = document.getElementById("respiration");
         var hr = document.getElementById("heartrate");
         var xhr = new XMLHttpRequest();
@@ -52,47 +52,52 @@
           }
         }
       }
-      /*setInterval(readRespirate, 333)
-      function readRespirate(){
-        var respi = document.getElementById("respiration");
-        var xhr = new XMLHttpRequest();
-        xhr.open("POST", "/respiration", true)
-        xhr.send();
-        xhr.onload=()=>{
-          if(xhr.readyState === 4){
-            if(xhr.status === 200){
-              var value = xhr.responseText();
-              respi.innerHTMl = "호흡 수: " + value+"번";
-            } else{
-              respi.innerHTML= "failed";
-            }
-          }
-        }
-      }*/
     </script>
     <style>
-        div{
-          font-size: 40px;
+        .grid_parent{
+          display: grid;
+          grid-gap: 5px;
         }
-        img{
-          margin-left: 500px;
-          margin-bottom: 300px;
+
+        div{
+          font-family: sans-serif;
+        }
+
+        #result{
+          font-size: 50px;
+          font-weight: bold;
+          display: inline-block;
+          border: 5px solid black;
+          border-radius: 10px;
+          padding: 10px;
         }
 
     </style>
 </head>
 <body>
-    <form action="index" method="post">
+    <div class = "grid_parent" style="grid-template-rows: 1fr 3fr;">
 
-        <div id= "result"></div>
-        <div id = "operatingtime"></div>
-        <div id = "notob"></div>
-        <div id = "ob"></div>
-        <div id = "respiration">분당 호흡 수: -번</div>
-        <div id = "heartrate">심박 수: -번</div>
-        {% if True %}
-        <img id="img" src="{{ url_for('static', filename=image_file) }}" alt='측정 중...' width = "640px" height = "480px" style="position:absolute; top:2px; right: 2px;"/>
-        {% endif %}
-    </form>
+        <div class="grid_parent" style="grid-row:1; grid-template-columns: 3fr 2fr">
+          <div id = "result" style="grid-column: 1"></div>
+          <div class="grid_parent" style="grid-column:2; grid-template-rows: 1fr 1fr 1fr">
+            <div id = "operatingtime" style="grid-row: 1; font-size: 30px;"></div>
+            <div id = "notob" style="grid-row: 2; font-size: 30px;"></div>
+            <div id = "onbed" style="grid-row: 3; font-size: 30px;"></div>
+          </div>
+        </div>
+
+        <div class="grid_parent" style="grid-row:2; grid-template-columns: 1fr 2fr;">
+
+          <div class="grid_parent" style="grid-column:1; grid-template-rows: 1fr 1fr;">
+            <div id = "respiration" style="grid-row:1; font-size: 40px;">분당 호흡 수: -번</div>
+            <div id = "heartrate" style="grid-row:2; font-size: 40px;">심박 수: -번</div>
+          </div>
+          
+          {% if True %}
+          <img id="img" src="{{ url_for('static', filename=image_file) }}" style="grid-column: 2" alt='측정 중...' width = "640px" height = "480px" style="position:absolute; top:100px; right: 2px;"/>
+          {% endif %}
+        </div>
+
+    </div>
 </body>
 </html>
