--- a/templates/TestPage.html
+++ b/templates/TestPage.html
@@ -140,8 +140,8 @@
 
         </div>
     </div>
-    <input type="button" value="자세 별 수면시간" onclick="display();"/>
-    <div id="sleep" style ="background-color: white; border:2px solid black; display:block; position: absolute; top: auto; bottom: auto;">
+    <input type="button" value="자세 별 수면시간" onclick="display();" style="position: absolute; bottom: 10px; width: 250px; height:100px; font-size: 2em; font-family: sans-serif; background-color: white; border: 2px solid black;"/>
+    <div id="sleep" style ="background-color: white; border:2px solid black; display:block; position: absolute; top: 50%; left: 50%; width: 500px; height: 500px; text-align: center; margin: -250px 0 0 -250px;">
       <div class = "sleep_posture">nothing: </div>
       <div class = "sleep_posture">leftsupine: </div>
       <div class = "sleep_posture">leftprone: </div>
