--- a/templates/TestPage.html
+++ b/templates/TestPage.html
@@ -157,15 +157,24 @@
         <div style="grid-column: 2; grid-row: 7;">xsupine</div>
         <div style="grid-column: 2; grid-row: 8;">prone</div>
         <div style="grid-column: 2; grid-row: 9;">not sleeping</div>
-        <div class = "sleep_posture" style="grid-column: 3; grid-row: 1;"> </div>
-        <div class = "sleep_posture" style="grid-column: 3; grid-row: 2;"> </div>
-        <div class = "sleep_posture" style="grid-column: 3; grid-row: 3;"> </div>
-        <div class = "sleep_posture" style="grid-column: 3; grid-row: 4;"> </div>
-        <div class = "sleep_posture" style="grid-column: 3; grid-row: 5;"> </div>
-        <div class = "sleep_posture" style="grid-column: 3; grid-row: 6;"> </div>
-        <div class = "sleep_posture" style="grid-column: 3; grid-row: 7;"> </div>
-        <div class = "sleep_posture" style="grid-column: 3; grid-row: 8;"> </div>
-        <div class = "sleep_posture" style="grid-column: 3; grid-row: 9;"> </div>
+        <div style="grid-column: 3; grid-row: 1;">:</div>
+        <div style="grid-column: 3; grid-row: 2;">:</div>
+        <div style="grid-column: 3; grid-row: 3;">:</div>
+        <div style="grid-column: 3; grid-row: 4;">:</div>
+        <div style="grid-column: 3; grid-row: 5;">:</div>
+        <div style="grid-column: 3; grid-row: 6;">:</div>
+        <div style="grid-column: 3; grid-row: 7;">:</div>
+        <div style="grid-column: 3; grid-row: 8;">:</div>
+        <div style="grid-column: 3; grid-row: 9;">:</div>
+        <div class = "sleep_posture" style="grid-column: 4; grid-row: 1;"> </div>
+        <div class = "sleep_posture" style="grid-column: 4; grid-row: 2;"> </div>
+        <div class = "sleep_posture" style="grid-column: 4; grid-row: 3;"> </div>
+        <div class = "sleep_posture" style="grid-column: 4; grid-row: 4;"> </div>
+        <div class = "sleep_posture" style="grid-column: 4; grid-row: 5;"> </div>
+        <div class = "sleep_posture" style="grid-column: 4; grid-row: 6;"> </div>
+        <div class = "sleep_posture" style="grid-column: 4; grid-row: 7;"> </div>
+        <div class = "sleep_posture" style="grid-column: 4; grid-row: 8;"> </div>
+        <div class = "sleep_posture" style="grid-column: 4; grid-row: 9;"> </div>
       </div>
     </div>
 </body>
